fix: Pricing card button realignment

--- a/scrybe_frontend/src/pages/Pricing/Pricing.module.scss
+++ b/scrybe_frontend/src/pages/Pricing/Pricing.module.scss
@@ -93,8 +93,8 @@
   margin: 3rem auto;
   background-color: #e6f0ff;
   padding: 1rem;
-    @include media(520px) {
-   flex-direction: column;
+  @include media(520px) {
+    flex-direction: column;
   }
 }
 .pricing .CTA .CTAs .ctaMonth,
@@ -177,6 +177,9 @@
 .plansCard p {
   color: #454545;
   font-size: 1rem;
+  @include media(420px) {
+    font-size: pix-rem(14);
+  }
 }
 
 .plansCardTitle,
@@ -200,7 +203,6 @@
   margin-block: 4rem;
   width: min(100%, 75.25rem);
   margin-inline: auto;
-
 }
 
 .pricingFeatures {
@@ -226,14 +228,13 @@ table {
   padding-block: 2rem;
   width: 95%;
   margin-inline: auto;
- 
+
   @include media(1220px) {
     width: pix-rem(1024);
   }
-     @include media(768px) {
-    width:  pix-rem(700);
+  @include media(768px) {
+    width: pix-rem(700);
   }
-
 }
 thead {
   background-color: #005584;
@@ -245,28 +246,24 @@ th,
 td {
   padding: 0.75rem;
 }
-tr th:first-child, tr td:first-child {
+tr th:first-child,
+tr td:first-child {
   text-align: left;
-   position: sticky;
+  position: sticky;
   left: 0;
-;
-    @include media(768px) {
+  @include media(768px) {
     width: 30%;
   }
 }
 tr td:first-child {
-
-    @include media(768px) {
-      background-color: #fff;
+  @include media(768px) {
+    background-color: #fff;
   }
- 
 }
 tr th:first-child {
-
-    @include media(768px) {
-      background-color: #005584;
+  @include media(768px) {
+    background-color: #005584;
   }
- 
 }
 tr img {
   margin-inline: auto;
